--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.4.1",
-    "prompt": "^1.3.0"
+    "prompt": "^1.3.0",
+    "qrcode-terminal": "^0.12.0"
   }
 }
